# Model-for-Returning-North-American-Accent-from-Transcripts

./: .gitattributes  .gitignore  README.md  app_streamlit.py  pyproject.toml  requirements.txt
checkpoints_text_mpsa_8h/feature_cache/: token_map_4f49a2b90ed6cea249312ebf9b8428a7.pt
checkpoints_text_reset/feature_cache/token_map_50b568f367b84d7e5f8c499ceff31af4/: manifest.json  shard_00000.pt  shard_00001.pt  shard_00002.pt  shard_00003.pt  shard_00004.pt  shard_00005.pt  shard_00006.pt  shard_00007.pt  shard_00008.pt  shard_00009.pt  shard_00010.pt  shard_00011.pt  shard_00012.pt  shard_00013.pt  shard_00014.pt  shard_00015.pt  shard_00016.pt  shard_00017.pt  shard_00018.pt  shard_00019.pt  shard_00020.pt  shard_00021.pt  shard_00022.pt  shard_00023.pt  shard_00024.pt  shard_00025.pt  shard_00026.pt  vocab.json
scripts/: merge_dataset_parts.ps1  split_dataset.ps1
src/conase_geo/: __init__.py  config.py  eval.py  eval_text_timed.py  evaluate.py  game_cli.py  game_text_cli.py  predict.py  predict_text.py  report_eval_visual.py  report_text.py  text_utils.py  train.py  train_text.py
src/conase_geo/data/: __init__.py  audio_fetch.py  clip_audio.py  load_conase.py  make_manifest.py  parse_tokens.py
src/conase_geo/features/: __init__.py  prosody_features.py  timing_features.py
src/conase_geo/models/: __init__.py  classifier.py  encoders.py  mpsa_densenet.py  text_linear.py  text_mpsa.py
tests/: test_mpsa_model.py  test_parse_tokens.py  test_text_utils.py  test_timing_features.py
