[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conase-geo"
version = "0.1.0"
description = "Dialect location guesser game framework for CoNASE."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchaudio>=2.1",
  "librosa>=0.10",
  "tqdm>=4.66",
  "soundfile>=0.12",
]

[project.optional-dependencies]
app = ["streamlit>=1.31"]
youtube = ["yt-dlp>=2025.1.0"]
mic = ["sounddevice>=0.4"]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
